Bug 411815 - Password filtering extremely slow
Summary: Password filtering extremely slow
Status: RESOLVED FIXED
Alias: None
Product: plasma-pass
Classification: Plasma
Component: General (show other bugs)
Version: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Daniel Vrátil
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-11 10:47 UTC by Florian Lindner
Modified: 2019-12-05 14:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In: 0.2


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Florian Lindner 2019-09-11 10:47:39 UTC
Hello,

I have about 160 passwords stored (output of `find . -name "*.gpg" | wc -l` in `.password-store`). Before I changed back to KDE, I used pass from i3 using passmenu (dmenu based). Filtering passwords was extremely fast and without noticeable delay.

With plasma-pass, on the other hand, there is a significant delay as I type. Typing in three letters, that return 9 results takes ~4 seconds until the list is filtered.

For me, that seriously impacts usability, especially because my password store continues to grow larger.

Thanks!
Comment 1 Daniel Vrátil 2019-12-05 14:24:47 UTC
Git commit 092a5f9fbb09e12c76ff9f2f0db803bc950c78fc by Daniel Vrátil.
Committed on 05/12/2019 at 14:24.
Pushed by dvratil into branch 'master'.

Delay filtering after user paused typing

Wait 100ms after user has finished typing before applying the new
filter to the QSFPM. This notably reduces the lag, especially with
larger password stores.
FIXED-IN: 0.2

M  +32   -6    plugin/passwordfiltermodel.cpp
M  +4    -0    plugin/passwordfiltermodel.h

https://commits.kde.org/plasma-pass/092a5f9fbb09e12c76ff9f2f0db803bc950c78fc