Delay filtering after user paused typing

Wait 100ms after user has finished typing before applying the new
filter to the QSFPM. This notably reduces the lag, especially with
larger password stores.

BUG: 411815
FIXED-IN: 0.2